（紧急）8、干部名册详情中去掉工作电话、人事关系所在单位、进入单位时间、当前分管工作和曾任职信息。基本信息页面中的字段标题加背景色，其他页面列表表头字体加粗，基本信息页面放八列，字段顺序和排版需要重新调整

--- a/Cadres/app/src/main/res/layout/fragment_gb_award.xml
+++ b/Cadres/app/src/main/res/layout/fragment_gb_award.xml
@@ -18,6 +18,7 @@
         android:layout_width="@dimen/dp_80"
         android:layout_height="0dp"
         android:gravity="center"
+        android:textStyle="bold"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@+id/view_title"
         app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -38,6 +39,7 @@
         android:layout_width="@dimen/dp_80"
         android:layout_height="0dp"
         android:gravity="center"
+        android:textStyle="bold"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/tv_jclx"
         app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -59,6 +61,7 @@
         android:layout_height="0dp"
         android:gravity="center"
         android:textSize="14sp"
+        android:textStyle="bold"
         android:maxLines="3"
         app:layout_constraintStart_toEndOf="@+id/tv_jcmc"
         app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -77,6 +80,7 @@
     <TextView
         android:id="@+id/tv_jllx"
         android:layout_width="@dimen/dp_80"
+        android:textStyle="bold"
         android:layout_height="0dp"
         android:textSize="14sp"
         android:gravity="center"
@@ -97,6 +101,7 @@
     <TextView
         android:id="@+id/tv_cflx"
         android:layout_width="@dimen/dp_80"
+        android:textStyle="bold"
         android:layout_height="0dp"
         android:textSize="14sp"
         android:gravity="center"
@@ -119,6 +124,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textSize="14sp"
+        android:textStyle="bold"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_cflx"
         app:layout_constraintEnd_toStartOf="@+id/tv_jcsm"
@@ -141,6 +147,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textSize="14sp"
+        android:textStyle="bold"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_jcyy"
         app:layout_constraintEnd_toEndOf="@+id/view_title"
