--- a/Cadres/app/src/main/res/layout/fragment_gb_family.xml
+++ b/Cadres/app/src/main/res/layout/fragment_gb_family.xml
@@ -18,6 +18,7 @@
         android:layout_width="@dimen/dp_140"
         android:layout_height="0dp"
         android:gravity="center"
+        android:textStyle="bold"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@+id/view_title"
         app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -38,6 +39,7 @@
         android:layout_width="@dimen/dp_140"
         android:layout_height="0dp"
         android:gravity="center"
+        android:textStyle="bold"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/tv_cw"
         app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -58,6 +60,7 @@
         android:layout_width="@dimen/dp_140"
         android:layout_height="0dp"
         android:gravity="center"
+        android:textStyle="bold"
         android:textSize="14sp"
         android:maxLines="3"
         app:layout_constraintStart_toEndOf="@+id/tv_xm"
@@ -79,6 +82,7 @@
         android:layout_width="@dimen/dp_140"
         android:layout_height="0dp"
         android:textSize="14sp"
+        android:textStyle="bold"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_csny"
         app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -98,6 +102,7 @@
         android:id="@+id/tv_gzdwjzw"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:textStyle="bold"
         android:textSize="14sp"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_zzmm"
