--- a/Cadres/app/src/main/res/layout/fragment_gb_rank.xml
+++ b/Cadres/app/src/main/res/layout/fragment_gb_rank.xml
@@ -17,6 +17,7 @@
         android:id="@+id/tv_zt"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:textStyle="bold"
         android:gravity="center"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@+id/view_title"
@@ -38,6 +39,7 @@
         android:id="@+id/tv_zwjb"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:textStyle="bold"
         android:gravity="center"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/tv_zt"
@@ -61,6 +63,7 @@
         android:layout_height="0dp"
         android:gravity="center"
         android:textSize="14sp"
+        android:textStyle="bold"
         android:maxLines="3"
         app:layout_constraintStart_toEndOf="@+id/tv_zwjb"
         app:layout_constraintEnd_toStartOf="@+id/tv_xsdyjb"
@@ -82,6 +85,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textSize="14sp"
+        android:textStyle="bold"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_pzsj"
         app:layout_constraintEnd_toStartOf="@+id/tv_xsdyjbsj"
@@ -104,6 +108,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textSize="14sp"
+        android:textStyle="bold"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_xsdyjb"
         app:layout_constraintEnd_toEndOf="@id/view_title"
