--- a/Cadres/app/src/main/res/layout/fragment_gb_train.xml
+++ b/Cadres/app/src/main/res/layout/fragment_gb_train.xml
@@ -17,6 +17,7 @@
         android:id="@+id/tv_kssj"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:textStyle="bold"
         android:gravity="center"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@+id/view_title"
@@ -38,6 +39,7 @@
         android:id="@+id/tv_jssj"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:textStyle="bold"
         android:gravity="center"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/tv_kssj"
@@ -60,6 +62,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:gravity="center"
+        android:textStyle="bold"
         android:textSize="14sp"
         android:maxLines="3"
         app:layout_constraintStart_toEndOf="@+id/tv_jssj"
@@ -83,6 +86,7 @@
         android:layout_height="0dp"
         android:textSize="14sp"
         android:gravity="center"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/tv_pxts"
         app:layout_constraintEnd_toStartOf="@+id/tv_pxjb"
         app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -103,6 +107,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textSize="14sp"
+        android:textStyle="bold"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_pxb"
         app:layout_constraintEnd_toStartOf="@+id/tv_pxlb"
@@ -123,6 +128,7 @@
         android:id="@+id/tv_pxlb"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:textStyle="bold"
         android:textSize="14sp"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_pxjb"
@@ -146,6 +152,7 @@
         android:layout_height="0dp"
         android:textSize="14sp"
         android:gravity="center"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/tv_pxlb"
         app:layout_constraintEnd_toStartOf="@+id/tv_pxfs"
         app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -166,6 +173,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textSize="14sp"
+        android:textStyle="bold"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_pxjg"
         app:layout_constraintEnd_toStartOf="@+id/tv_pxnr"
@@ -187,6 +195,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textSize="14sp"
+        android:textStyle="bold"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_pxfs"
         app:layout_constraintEnd_toEndOf="@+id/view_title"
