--- a/Cadres/app/src/main/res/layout/fragment_gb_now.xml
+++ b/Cadres/app/src/main/res/layout/fragment_gb_now.xml
@@ -18,6 +18,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:gravity="center"
+        android:textStyle="bold"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@+id/view_title"
         app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -38,6 +39,7 @@
         android:id="@+id/tv_rzqk"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:textStyle="bold"
         android:gravity="center"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/tv_zwdw"
@@ -59,6 +61,7 @@
         android:id="@+id/tv_zwmc"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:textStyle="bold"
         android:gravity="center"
         android:textSize="14sp"
         android:maxLines="3"
@@ -82,6 +85,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textSize="14sp"
+        android:textStyle="bold"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_zwmc"
         app:layout_constraintEnd_toStartOf="@+id/tv_rzsj"
@@ -103,6 +107,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textSize="14sp"
+        android:textStyle="bold"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_rzyy"
         app:layout_constraintEnd_toStartOf="@+id/tv_rzwh"
@@ -123,6 +128,7 @@
         android:id="@+id/tv_rzwh"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:textStyle="bold"
         android:textSize="14sp"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_rzsj"
