--- a/Cadres/app/src/main/res/layout/fragment_gb_resume.xml
+++ b/Cadres/app/src/main/res/layout/fragment_gb_resume.xml
@@ -18,6 +18,7 @@
         android:layout_width="@dimen/dp_140"
         android:layout_height="0dp"
         android:gravity="center"
+        android:textStyle="bold"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@+id/view_title"
         app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -36,6 +37,7 @@
     <TextView
         android:id="@+id/tv_end_time"
         android:layout_width="@dimen/dp_140"
+        android:textStyle="bold"
         android:layout_height="0dp"
         android:gravity="center"
         android:textSize="14sp"
@@ -59,6 +61,7 @@
         android:layout_height="0dp"
         android:gravity="center"
         android:textSize="14sp"
+        android:textStyle="bold"
         android:maxLines="3"
         app:layout_constraintStart_toEndOf="@+id/tv_end_time"
         app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -80,6 +83,7 @@
         android:layout_height="0dp"
         android:textSize="14sp"
         android:gravity="center"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/tv_lx"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/view_title"
