2、首页底部的技术支持字体可以小些，靠下放，尽量放在花纹上面 3、干部名册详情中的奖惩记录列表中的奖惩原因列宽调窄点，奖惩名称可以加宽点

--- a/Cadres/app/src/main/res/layout/activity_home.xml
+++ b/Cadres/app/src/main/res/layout/activity_home.xml
@@ -266,8 +266,9 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="@dimen/sp_12"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="@dimen/dp_10"
+        android:layout_marginBottom="@dimen/dp_5"
         android:text="技术支持：宁乡市数据资源中心"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
