--- a/Cadres/app/src/main/res/layout/fragment_gb_award.xml
+++ b/Cadres/app/src/main/res/layout/fragment_gb_award.xml
@@ -36,7 +36,7 @@
 
     <TextView
         android:id="@+id/tv_jcmc"
-        android:layout_width="@dimen/dp_80"
+        android:layout_width="@dimen/dp_160"
         android:layout_height="0dp"
         android:gravity="center"
         android:textStyle="bold"
@@ -79,7 +79,7 @@
 
     <TextView
         android:id="@+id/tv_jllx"
-        android:layout_width="@dimen/dp_80"
+        android:layout_width="@dimen/dp_120"
         android:textStyle="bold"
         android:layout_height="0dp"
         android:textSize="14sp"
@@ -100,7 +100,7 @@
 
     <TextView
         android:id="@+id/tv_cflx"
-        android:layout_width="@dimen/dp_80"
+        android:layout_width="@dimen/dp_120"
         android:textStyle="bold"
         android:layout_height="0dp"
         android:textSize="14sp"
@@ -108,7 +108,7 @@
         app:layout_constraintStart_toEndOf="@+id/tv_jllx"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
-        android:text="惩戒类型"/>
+        android:text="惩罚类型"/>
 
     <View
         android:layout_width="@dimen/dp_1"
@@ -121,13 +121,12 @@
 
     <TextView
         android:id="@+id/tv_jcyy"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/dp_120"
         android:layout_height="0dp"
         android:textSize="14sp"
         android:textStyle="bold"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_cflx"
-        app:layout_constraintEnd_toStartOf="@+id/tv_jcsm"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
         android:text="奖惩原因"/>
