--- a/Cadres/app/src/main/res/layout/activity_search_detail.xml
+++ b/Cadres/app/src/main/res/layout/activity_search_detail.xml
@@ -42,6 +42,7 @@
         android:layout_marginEnd="@dimen/dp_15"
         android:overScrollMode="never"
         android:scrollbars="none"
+        android:fillViewport="true"
         android:layout_marginTop="@dimen/dp_10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -141,23 +142,12 @@
                 android:text="性别"/>
 
             <TextView
-                android:id="@+id/tv_nation"
-                android:layout_width="@dimen/dp_90"
+                android:id="@+id/tv_place"
+                android:layout_width="@dimen/dp_60"
                 android:layout_height="0dp"
                 android:textSize="14sp"
                 android:gravity="center"
                 app:layout_constraintStart_toEndOf="@+id/tv_sex"
-                app:layout_constraintTop_toTopOf="@+id/view_title"
-                app:layout_constraintBottom_toBottomOf="@+id/view_title"
-                android:text="民族"/>
-
-            <TextView
-                android:id="@+id/tv_place"
-                android:layout_width="@dimen/dp_90"
-                android:layout_height="0dp"
-                android:textSize="14sp"
-                android:gravity="center"
-                app:layout_constraintStart_toEndOf="@+id/tv_nation"
                 app:layout_constraintTop_toTopOf="@+id/view_title"
                 app:layout_constraintBottom_toBottomOf="@+id/view_title"
                 android:text="籍贯"/>
@@ -174,37 +164,28 @@
                 android:text="出生年月"/>
 
             <TextView
-                android:id="@+id/tv_rdsj"
-                android:layout_width="@dimen/dp_90"
+                android:id="@+id/tv_qrzwhcd"
+                android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:textSize="14sp"
                 android:gravity="center"
                 app:layout_constraintStart_toEndOf="@+id/tv_csny"
+                app:layout_constraintEnd_toStartOf="@+id/tv_zzwhcd"
                 app:layout_constraintTop_toTopOf="@+id/view_title"
                 app:layout_constraintBottom_toBottomOf="@+id/view_title"
-                android:text="入党时间"/>
-
-            <TextView
-                android:id="@+id/tv_qrzwhcd"
-                android:layout_width="@dimen/dp_120"
-                android:layout_height="0dp"
-                android:textSize="14sp"
-                android:gravity="center"
-                app:layout_constraintStart_toEndOf="@+id/tv_rdsj"
-                app:layout_constraintTop_toTopOf="@+id/view_title"
-                app:layout_constraintBottom_toBottomOf="@+id/view_title"
-                android:text="全日制文化程度"/>
+                android:text="全日制\n文化程度"/>
 
             <TextView
                 android:id="@+id/tv_zzwhcd"
-                android:layout_width="@dimen/dp_120"
+                android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:textSize="14sp"
                 android:gravity="center"
                 app:layout_constraintStart_toEndOf="@+id/tv_qrzwhcd"
+                app:layout_constraintEnd_toEndOf="@+id/view_title"
                 app:layout_constraintTop_toTopOf="@+id/view_title"
                 app:layout_constraintBottom_toBottomOf="@+id/view_title"
-                android:text="在职文化程度"/>
+                android:text="在职\n文化程度"/>
 
 
             <androidx.recyclerview.widget.RecyclerView
