研究决策 列表-投票

--- a/Cadres/app/src/main/res/values/colors.xml
+++ b/Cadres/app/src/main/res/values/colors.xml
@@ -30,6 +30,7 @@
     <color name="color_fd895b">#fd895b</color>
     <color name="color_eac71c">#eac71c</color>
     <color name="color_0b1342">#02051C</color>
+    <color name="color_eb8b49">#EB8B49</color>
 
     <color name="color_ffe1e2">#ffe1e2</color>
     <color name="color_ff6569">#ff6569</color>
