--- a/Cadres/app/src/main/res/layout/dialog_list2.xml
+++ b/Cadres/app/src/main/res/layout/dialog_list2.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/layout_parent"
     android:layout_width="@dimen/dp_200"
-    android:layout_height="match_parent"
+    android:layout_height="@dimen/dp_400"
     android:orientation="vertical">
 
     <androidx.recyclerview.widget.RecyclerView
