--- a/Cadres/app/src/main/res/values/colors.xml
+++ b/Cadres/app/src/main/res/values/colors.xml
@@ -34,5 +34,6 @@
 
     <color name="color_ffe1e2">#ffe1e2</color>
     <color name="color_ff6569">#ff6569</color>
+    <color name="color_1eb0fc">#1EB0FC</color>
 
 </resources>
