--- a/Cadres/app/src/main/res/layout/activity_dsjty.xml
+++ b/Cadres/app/src/main/res/layout/activity_dsjty.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <ImageView
         android:layout_width="0dp"
@@ -180,7 +181,7 @@
         app:layout_constraintTop_toBottomOf="@+id/view_title_bg"
         app:layout_constraintStart_toStartOf="@+id/view_title_bg"
         app:layout_constraintEnd_toEndOf="@+id/view_title_bg"
-        android:text="市人大常委"
+        tools:text="市人大常委"
         android:textColor="@color/white"
         android:drawableRight="@mipmap/ic_down2"
         android:drawablePadding="@dimen/dp_10"
