搜索条件修改

--- a/Cadres/app/src/main/res/layout/activity_search.xml
+++ b/Cadres/app/src/main/res/layout/activity_search.xml
@@ -211,12 +211,30 @@
                 app:max_select="-1"/>
 
             <TextView
-                android:id="@+id/tv_xxlx"
+                android:id="@+id/tv_xllx"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_20"
                 app:layout_constraintStart_toStartOf="@+id/guideline_start_30"
                 app:layout_constraintTop_toBottomOf="@+id/fl_xl"
+                android:text="学历类型："/>
+
+            <com.example.cadres.widget.flowlayout.TagFlowLayout
+                android:id="@+id/fl_xllx"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@+id/guideline_start_180"
+                app:layout_constraintEnd_toEndOf="@+id/guideline_end"
+                app:layout_constraintTop_toTopOf="@+id/tv_xllx"
+                app:max_select="-1"/>
+
+            <TextView
+                android:id="@+id/tv_xxlx"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_20"
+                app:layout_constraintStart_toStartOf="@+id/guideline_start_30"
+                app:layout_constraintTop_toBottomOf="@+id/fl_xllx"
                 android:text="学校类型："/>
 
             <com.example.cadres.widget.flowlayout.TagFlowLayout
