--- a/Cadres/app/src/main/res/layout/activity_home.xml
+++ b/Cadres/app/src/main/res/layout/activity_home.xml
@@ -46,7 +46,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:imeOptions="actionSearch"
         android:paddingStart="@dimen/dp_20"
-        android:hint="请输入干部姓名、单位名称进行搜索"
+        android:hint="请输入关键字进行搜索"
         android:paddingEnd="@dimen/dp_15"
 
         android:focusable="false"
