--- a/Cadres/app/src/main/res/layout/activity_yjjc_vote.xml
+++ b/Cadres/app/src/main/res/layout/activity_yjjc_vote.xml
@@ -22,6 +22,8 @@
         android:id="@+id/tv_name"
         android:layout_width="@dimen/dp_80"
         android:layout_height="0dp"
+        android:paddingStart="@dimen/dp_3"
+        android:paddingEnd="@dimen/dp_3"
         android:gravity="center"
         app:layout_constraintStart_toStartOf="@+id/view_title"
         app:layout_constraintTop_toTopOf="@+id/view_title"
@@ -43,6 +45,8 @@
         android:layout_height="0dp"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_name"
+        android:paddingStart="@dimen/dp_3"
+        android:paddingEnd="@dimen/dp_3"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
         android:text="现任职务"/>
@@ -52,45 +56,49 @@
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintStart_toEndOf="@+id/tv_xrzw"
-        app:layout_constraintEnd_toStartOf="@+id/tv_nrzw"
+        app:layout_constraintEnd_toStartOf="@+id/tv_xrzsj"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
         android:background="@color/color_ffd7b4"/>
 
 
     <TextView
-        android:id="@+id/tv_nrzw"
+        android:id="@+id/tv_xrzsj"
         android:layout_width="@dimen/dp_160"
         android:layout_height="0dp"
         android:gravity="center"
         app:layout_constraintStart_toEndOf="@+id/tv_xrzw"
         app:layout_constraintTop_toTopOf="@+id/view_title"
+        android:paddingStart="@dimen/dp_3"
+        android:paddingEnd="@dimen/dp_3"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
-        android:text="拟任职务"/>
+        android:text="现任职时间"/>
 
     <View
         android:layout_width="@dimen/dp_1"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="@+id/view_title"
-        app:layout_constraintStart_toEndOf="@+id/tv_nrzw"
-        app:layout_constraintEnd_toStartOf="@+id/tv_nmzw"
+        app:layout_constraintStart_toEndOf="@+id/tv_xrzsj"
+        app:layout_constraintEnd_toStartOf="@+id/tv_nmtmzw"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
         android:background="@color/color_ffd7b4"/>
 
     <TextView
-        android:id="@+id/tv_nmzw"
+        android:id="@+id/tv_nmtmzw"
         android:layout_width="@dimen/dp_160"
         android:layout_height="0dp"
         android:gravity="center"
-        app:layout_constraintStart_toEndOf="@+id/tv_nrzw"
+        app:layout_constraintStart_toEndOf="@+id/tv_xrzsj"
         app:layout_constraintTop_toTopOf="@+id/view_title"
+        android:paddingStart="@dimen/dp_3"
+        android:paddingEnd="@dimen/dp_3"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
-        android:text="拟免职务"/>
+        android:text="拟任免\n（提名）职务"/>
 
     <View
         android:layout_width="@dimen/dp_1"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="@+id/view_title"
-        app:layout_constraintStart_toEndOf="@+id/tv_nmzw"
+        app:layout_constraintStart_toEndOf="@+id/tv_nmtmzw"
         app:layout_constraintEnd_toStartOf="@+id/tv_tpjg"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
         android:background="@color/color_ffd7b4"/>
@@ -100,8 +108,10 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:gravity="center"
-        app:layout_constraintStart_toEndOf="@+id/tv_nmzw"
+        app:layout_constraintStart_toEndOf="@+id/tv_nmtmzw"
         app:layout_constraintEnd_toEndOf="@+id/view_title"
+        android:paddingStart="@dimen/dp_3"
+        android:paddingEnd="@dimen/dp_3"
         app:layout_constraintTop_toTopOf="@+id/view_title"
         app:layout_constraintBottom_toBottomOf="@+id/view_title"
         android:text="投票结果"/>
